feat: Setup Next.js frontend with GitHub OAuth

--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,7 @@ prisma/migrations/
 **/public/worker-*.js
 **/public/sw.js.map
 **/public/workbox-*.js.map
-**/public/worker-*.js.map 
+**/public/worker-*.js.map
+
+# Package Lock File
+package-lock.json 
